# research

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  _index.org  about.org  chicago-author-date.csl  config.toml  config.yaml  local-bib.bib  main.org  makefile  notes.org  posts.org  readme.md  readme.org  references.bib
emacs/: init.el
linux/: _index.org  emacs.org  environment-variables.org  oss-contributions.org  x1e3.org  xdg-base-dir.org
misc/: _index.org  hashcode-2021-finals.org
pages/: about.org  current.org  cv.org  dictionary.org  future-work.org  glossary.org  local-bib.bib  projects.org  publications.bib  publications.org  service.org  software.org  talks.org  todo.org  wip.org
papers/: spaced-kmer-distance.org
posts/: APSP.org  DSB-2023.org  _index.org  ai-reading-list.org  alg-viz.org  astarpa-poster.org  astarpa-talk-cwi.org  asymptotic-elevators.org  bapctools-demo.org  bbhash.org  brisk.org  calling-rust-from-python.org  consensus.org  cwi-proposal.org  dictionary.org  distributing-rust-simd-binaries.org  emacs.org  entropy-efficient-sketching.org  environment-variables.org  evolution-of-mathematical-software.org  fast-binary-search.org  feynman-problems.org  fm-index-implementations.org  fm-index-variants.org  future-work.org  glossary.org  hamming-similarity-search.org  hashcode-2021-finals.org  hprc-v2-stats.org  (+40 more)
posts/release-flow/: CHANGELOG.md  Cargo.toml  bioconda-meta.yaml  config-portable.toml  config.toml  github-release-pypi.yaml  github-release.yaml  github-test.yaml  pyproject.toml  release-flow.org  release.toml
(+285 files in other folders)
