# Cargo.toml

[package]
name = "sassy"
version = "0.1.10"
edition = "2024"
authors = ["Rick Beeloo", "Ragnar Groot Koerkamp"]
description = "Approximate string matching using SIMD"
repository = "https://github.com/RagnarGrootKoerkamp/sassy"
keywords = ["bioinformatics", "string", "fuzzy", "search", "simd"]
categories = ["science"]
readme = "README.md"
license = "MIT"
rust-version = "1.91"

# Cargo.toml

[profile.dist]
inherits = 'release'
incremental = false
codegen-units = 1
lto = true
debug = false
